bk_ida/gccida/c3/gen_peephole2_1263
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_peephole2_1263/src/insn-emit.c:18308:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_peephole2_1263/src/insn-emit.c:18338:23: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx( v10, ( machine_mode)v7, v5, v11); 
                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_peephole2_1263/src/obj/insn-emit.o] Error 1
